Fixed two item list layout issues

--- a/public/css/raesonic.css
+++ b/public/css/raesonic.css
@@ -153,7 +153,7 @@ body
 
 #content-left
 {
-	width: 100%;
+	width: calc(100% - 480px);
 	height: 100%;
 	margin-bottom: 0px;
 }
@@ -200,6 +200,7 @@ body
 .item, .item.odd
 {
 	height: 40px;
+	overflow: hidden;
 	color: #F2F2F2;
 	background-color: #342F3F;
 	font-size: 16px;
